--- a/.gitignore
+++ b/.gitignore
@@ -127,7 +127,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-#pycharm files
+
+# Pycharm files
+
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
